Fix:Align jacket img to the right of the text

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 .header{
-    font-family: Georgia, serif;
-    display: flex;
-    flex-direction: row;
-    color: #CCB9A7;
-    background-color:#76726F;
-    margin: 0;
-    padding: 10px;
-    border: 0;
-    justify-content: space-between;
+  font-family: Georgia, serif;
+  display: flex;
+  flex-direction: row;
+  color: #CCB9A7;
+  background-color:#76726F;
+  margin: 0;
+  padding: 10px;
+  border: 0;
+  justify-content: space-between;
 
 }
 #logo{
@@ -16,69 +16,74 @@ height: 150px;
 
 }
 ul {
-    list-style-type: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-    gap: 16px;
-    flex-direction: row-reverse;
-  }
+  list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+  flex-direction: row-reverse;
+}
 body{
-    margin: 0;
+  margin: 0;
 }
 a {
-    /* this removes the line under our links */
-    text-decoration: none;
-    color: rgb(216, 212, 174);
-  }
+  /* this removes the line under our links */
+  text-decoration: none;
+  color: rgb(216, 212, 174);
+}
 .container{
-    display: flex;
-    flex-direction: column;
-align-items: center;
-color: #CCB9A7;
-background-color:#76726F;
-padding-bottom: 20px;
-
-  }
-  button{
-    width: fit-content;
-
-  }
+  display: flex;
+  /* flex-direction: column;*/
+  justify-content: space-evenly;
+  color: #CCB9A7;
+  background-color:#76726F;
+  padding: 32px;
+  width: 100%;
+}
+button{
+  width: fit-content;
+  
+}
 .boldd{
-    font-size: 40px;
-    font-weight: bolder;
+  font-size: 40px;
+  font-weight: bolder;
 }
 #jacket{
-    height: 303px;
+  height: 303px;
 }
+.img-container{
+flex:  0 calc(100% - 350px);
+max-width: calc(100% - 350px);
+align-items: center; 
 
+}
 
 /* CSS */
 .button-54 {
-  font-family: "Open Sans", sans-serif;
-  font-size: 16px;
-  letter-spacing: 2px;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #000;
-  cursor: pointer;
-  border: 3px solid;
-  padding: 0.25em 0.5em;
-  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
-  position: relative;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+font-family: "Open Sans", sans-serif;
+font-size: 16px;
+letter-spacing: 2px;
+text-decoration: none;
+text-transform: uppercase;
+color: #000;
+cursor: pointer;
+border: 3px solid;
+padding: 0.25em 0.5em;
+box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+position: relative;
+user-select: none;
+-webkit-user-select: none;
+touch-action: manipulation;
 }
 
 .button-54:active {
-  box-shadow: 0px 0px 0px 0px;
-  top: 5px;
-  left: 5px;
+box-shadow: 0px 0px 0px 0px;
+top: 5px;
+left: 5px;
 }
 
 @media (min-width: 768px) {
-  .button-54 {
-    padding: 0.25em 0.75em;
-  }
+.button-54 {
+  padding: 0.25em 0.75em;
+}
 }
